packages/bastest/tests/cli/snapshots/discovery_test__cli_can_disable_in-source_test_discovery.snap
---
source: tests/cli/discovery_test.ts
expression: [
    `status: ${result.status}`,
    "stdout:",
    indentBlock(normalizeLog(result.stdout)),
    "stderr:",
    indentBlock(normalizeLog(result.stderr)),
  ].join("\n")
---
status: 0
stdout:
  No test files found.
stderr:
  <empty>
