packages/bastest/tests/cli/snapshots/discovery_test__cli_discovers_in-source_tests_by_default.snap
---
source: tests/cli/discovery_test.ts
expression: [
    `status: ${result.status}`,
    "stdout:",
    indentBlock(normalizeLog(result.stdout)),
    "stderr:",
    indentBlock(normalizeLog(result.stderr)),
  ].join("\n")
---
status: 0
stdout:
  
  src/source.ts
    in-source pass ... ok (<duration>)
  
  ok | 1 passed | 0 failed | 0 ignored (<duration>)
stderr:
  <empty>
