packages/bastest/tests/cli/snapshots/discovery_test__cli_fails_when_bastest.jsonc_is_not_found.snap
---
source: tests/cli/discovery_test.ts
expression: [
    `status: ${result.status}`,
    "stdout:",
    indentBlock(normalizeLog(result.stdout)),
    "stderr:",
    indentBlock(normalizeLog(result.stderr)),
  ].join("\n")
---
status: 2
stdout:
  <empty>
stderr:
  could not find `bastest.jsonc` in `<tmp>` or any parent directory
